Fix breakpoint alignment issue
Previously the editor wrapping element was named editor, which is an
internal code-mirror class. Now it's editor-wrapper, which is more
specific and avoids the collision.

--- a/js/components/Editor.css
+++ b/js/components/Editor.css
@@ -8,7 +8,7 @@
  * There's a known codemirror flex issue with chrome that this addresses.
  * BUG https://github.com/jlongster/debugger.html/issues/63
  */
-.editor {
+.editor-wrapper {
   position: absolute;
   height: calc(100% - 30px);
   width: 100%;
